Fixed distorted image in admin.

--- a/sites/nuswhispers/angular/css/admin.scss
+++ b/sites/nuswhispers/angular/css/admin.scss
@@ -186,7 +186,7 @@ h2 {
         padding: 0 1em 1em;
         img {
             max-width: 100%;
-            height: 100%;
+            height: auto;
         }
     }
 }
